--- a/frontend/src/app/features/qa/components/answer-item/answer-item.component.html
+++ b/frontend/src/app/features/qa/components/answer-item/answer-item.component.html
@@ -13,50 +13,70 @@
   </div>
   
   <div class="content-container">
-    <div class="prose dark:prose-invert max-w-none" [innerHTML]="answer().body"></div>
     
-    @if (answer().attachments && answer().attachments.length > 0) {
-      <div class="attachments-section">
-        <div class="attachments-list">
-          @for (att of answer().attachments; track att.fileUrl) {
-            <a class="attachment-item" [href]="att.fileUrl" target="_blank" [title]="att.fileName">
-              @if (att.fileType.startsWith('image/')) {
-                <img [src]="att.fileUrl" alt="{{ att.fileName }}" class="img-preview" />
-              } @else {
-                <span nz-icon nzType="file-text" class="file-icon"></span>
-                <span class="file-name">{{ att.fileName }}</span>
-              }
-            </a>
+    @if (isEditing()) {
+      <app-post-edit-form
+        [initialBody]="answer().body"
+        [initialAttachments]="answer().attachments"
+        postType="Answer"
+        (save)="handleSave($event)"
+        (cancel)="isEditing.set(false)"
+      ></app-post-edit-form>
+
+    } @else {
+      <div class="prose dark:prose-invert max-w-none" [innerHTML]="answer().body"></div>
+      
+      @if (answer().attachments && answer().attachments.length > 0) {
+        <div class="attachments-section">
+          <div class="attachments-list">
+            @for (att of answer().attachments; track att.fileUrl) {
+              <a class="attachment-item" [href]="att.fileUrl" target="_blank" [title]="att.fileName">
+                @if (att.fileType.startsWith('image/')) {
+                  <img [src]="att.fileUrl" alt="{{ att.fileName }}" class="img-preview" />
+                } @else {
+                  <span nz-icon nzType="file-text" class="file-icon"></span>
+                  <span class="file-name">{{ att.fileName }}</span>
+                }
+              </a>
+            }
+          </div>
+        </div>
+      }
+
+      <div class="action-bar">
+        <div class="actions">
+          @if (isQuestionAuthor() && !answer().isSolution) {
+            <button nz-button nzType="text" (click)="markAsSolution()" class="action-button solution-button">
+              <span nz-icon nzType="check-circle"></span>
+              Mark as Solution
+            </button>
           }
+          @if(authService.isUserLoggedIn()){
+            <button nz-button nzType="text" (click)="isCommentFormVisible.set(!isCommentFormVisible())" class="action-button">
+              <span nz-icon nzType="message"></span>
+              Add Comment
+            </button>
+          }
+
+          @if (isCurrentUserAuthor()) {
+            <button nz-button nzType="text" (click)="isEditing.set(true)" class="action-button">
+              <span nz-icon nzType="edit"></span> Edit
+            </button>
+            <button nz-button nzType="text" nzDanger (click)="deleteAnswer()" class="action-button">
+              <span nz-icon nzType="delete"></span> Delete
+            </button>
+          }
+        </div>
+        
+        <div class="author-card">
+          <span class="text-xs">answered {{ answer().createdAt | timeAgo }}</span>
+          <a class="author-info" [routerLink]="['/users', answer().author.userId]">
+            <nz-avatar [nzSize]="24" [nzSrc]="answer().author.profilePhotoUrl ?? undefined" [nzText]="answer().author.username.charAt(0).toUpperCase()"></nz-avatar>
+            <span class="author-name">{{ answer().author.username }}</span>
+          </a>
         </div>
       </div>
     }
-
-    <div class="action-bar">
-      <div class="actions">
-        @if (isQuestionAuthor() && !answer().isSolution) {
-          <button nz-button nzType="text" (click)="markAsSolution()" class="action-button solution-button">
-            <span nz-icon nzType="check-circle"></span>
-            Mark as Solution
-          </button>
-        }
-        @if(authService.isUserLoggedIn()){
-          <button nz-button nzType="text" (click)="isCommentFormVisible.set(!isCommentFormVisible())" class="action-button">
-            <span nz-icon nzType="message"></span>
-            Add Comment
-          </button>
-        }
-      </div>
-      
-      <div class="author-card">
-        <span class="text-xs">answered {{ answer().createdAt | timeAgo }}</span>
-        <a class="author-info" [routerLink]="['/users', answer().author.userId]">
-          <nz-avatar [nzSize]="24" [nzSrc]="answer().author.profilePhotoUrl ?? undefined" [nzText]="answer().author.username.charAt(0).toUpperCase()"></nz-avatar>
-          <span class="author-name">{{ answer().author.username }}</span>
-        </a>
-      </div>
-    </div>
-    
     <div class="comment-form-wrapper" [hidden]="!isCommentFormVisible()">
       <form [formGroup]="commentForm" (ngSubmit)="submitComment()">
         <textarea nz-input formControlName="body" placeholder="Write a comment..." [nzAutosize]="{ minRows: 2, maxRows: 5 }"></textarea>
